src/test/deca/context/invalid/test_error_1.3-3.deca
// Description:
//    Souleve l'erreur (1.3)

// Resultats:
//    Erreur contextuelle
//    Ligne 11 : L’identificateur super doit être un identificateur de classe préalablement déclaré (règle 1.3)
//
// Historique:
//    cree le 14/01/2022

class A extends int {
}

{
}
